feat: Complete Wave 10 - App Shell Migration
Wire up React app to replace Web Components across all pages.
Creates main React app shell with context providers, navigation,
and entry points.

## New React App Architecture (14 files)

### Core App Shell:
- AppProviders.tsx: Wraps app with ConnectionProvider, ThemeProvider, ProxyProvider
- App.tsx + .module.css: Main app shell with tab switching logic
- TabNavigation.tsx + .module.css: Tab bar with auth/proxy-based disabled states
- ConnectionSelector.tsx + .module.css: Header connection display (responsive)
- MobileMenu.tsx + .module.css: Full mobile menu with tabs and connections

### React Entry Points:
- index.tsx: Main app entry (mounts App with providers)
- record.tsx: Record viewer entry (mounts RecordPage)
- schema.tsx: Schema browser entry (mounts SchemaPage)

## HTML Updates

All three pages simplified to React mount points:

**app.html**: 139→11 lines (removed Web Component shell, now just <div id="root">)
**record.html**: 81→10 lines (removed Web Component shell)
**schema.html**: 81→10 lines (removed Web Component shell)

## Entry Script Updates

Replaced Web Component imports with React mounting:

**app.ts**: 607→11 lines (import React entry instead of Web Components)
**record.ts**: Replaced with React entry import
**schema.ts**: Replaced with React entry import

## Integration

App.tsx integrates all React tab components:
- QueryTab, ApexTab, RestApiTab, EventsTab, UtilsTab, SettingsTab

Standalone pages use:
- RecordPage, SchemaPage

All components use shared contexts for state management.

## Migration Status

✅ Wave 1: Simple Reusable Components
✅ Wave 2: Monaco Editor
✅ Wave 3: Utils Tab Tools
✅ Wave 4: Settings Tab
✅ Wave 5: Simple Tabs
✅ Wave 6: Events Tab
✅ Wave 7: Apex Tab
✅ Wave 8: Query Tab
✅ Wave 9: Standalone Pages
✅ Wave 10: App Shell (THIS COMMIT)

Total: 76 React files created

Next: Phase 3 - Cleanup (remove Web Components)

Build: ✅ Types: ✅

--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -8,142 +8,7 @@
         <link rel="stylesheet" href="../../style.css" />
     </head>
     <body>
-        <div class="app-container">
-            <nav class="tab-nav">
-                <button class="hamburger-btn" aria-label="Menu">
-                    <sf-icon name="hamburger"></sf-icon>
-                </button>
-                <div class="nav-brand">
-                    <img src="../../icon.png" alt="" class="nav-brand-icon" />sftools
-                </div>
-                <div class="current-connection-display"></div>
-            </nav>
-
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <div class="mobile-menu-header">
-                    <div class="nav-brand">
-                        <img src="../../icon.png" alt="" class="nav-brand-icon" />sftools
-                    </div>
-                    <button class="mobile-menu-close" aria-label="Close menu">
-                        <sf-icon name="closeLarge"></sf-icon>
-                    </button>
-                </div>
-                <div class="mobile-menu-content">
-                    <nav class="mobile-nav">
-                        <button class="mobile-nav-item active" data-tab="query">Query</button>
-                        <button class="mobile-nav-item" data-tab="apex">Apex</button>
-                        <button class="mobile-nav-item" data-tab="rest-api">REST API</button>
-                        <button class="mobile-nav-item" data-tab="events">Platform Events</button>
-                        <button class="mobile-nav-item" data-tab="utils">Utils</button>
-                        <button class="mobile-nav-item" data-tab="settings">Settings</button>
-                    </nav>
-                    <hr class="mobile-menu-divider" />
-                    <button class="mobile-nav-item" id="mobile-open-org">Open Org</button>
-                    <button class="mobile-nav-item" id="mobile-open-tab">Open in Tab</button>
-                    <hr class="mobile-menu-divider" />
-                    <div class="mobile-connection-section">
-                        <span class="mobile-section-label">Connections</span>
-                        <div class="mobile-connection-list"></div>
-                        <button class="mobile-nav-item mobile-add-connection">
-                            + Add Connection
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="mobile-menu-overlay"></div>
-
-            <main class="content-area">
-                <query-tab id="query" class="tab-content active"></query-tab>
-
-                <apex-tab id="apex" class="tab-content"></apex-tab>
-
-                <events-tab id="events" class="tab-content"></events-tab>
-
-                <rest-api-tab id="rest-api" class="tab-content"></rest-api-tab>
-
-                <utils-tab id="utils" class="tab-content"></utils-tab>
-
-                <settings-tab id="settings" class="tab-content"></settings-tab>
-            </main>
-        </div>
-
-        <!-- CORS Error Modal -->
-        <modal-popup id="cors-error-modal">
-            <div style="padding: 24px; max-width: 600px">
-                <h3 style="margin-top: 0; margin-bottom: 16px; color: var(--error-color)">
-                    CORS Configuration Required
-                </h3>
-                <p style="margin-bottom: 16px">
-                    To allow the Chrome extension to make requests to your Salesforce org, you need
-                    to add a CORS entry or enable the local proxy.
-                </p>
-                <p style="margin-bottom: 12px; font-weight: 600">
-                    Option 1: Configure CORS in Salesforce (Recommended for Quick Setup)
-                </p>
-                <ol style="margin-bottom: 20px; padding-left: 24px">
-                    <li>In Salesforce Setup, search for "CORS"</li>
-                    <li>Click "CORS" under Security</li>
-                    <li>Click "New" to add an allowed origin pattern</li>
-                    <li>
-                        Enter:
-                        <code
-                            style="
-                                background: var(--bg-secondary);
-                                padding: 2px 6px;
-                                border-radius: 3px;
-                            "
-                            >chrome-extension://mckblnkfhlgocgmehmnihmagmhbnjioj</code
-                        >
-                    </li>
-                    <li>Save the CORS entry</li>
-                </ol>
-                <p style="margin-bottom: 12px; font-weight: 600">
-                    Option 2: Enable Local Proxy (Bypasses CORS Automatically)
-                </p>
-                <ol style="margin-bottom: 20px; padding-left: 24px">
-                    <li>
-                        Install
-                        <a
-                            href="https://nodejs.org/"
-                            target="_blank"
-                            style="color: var(--primary-color)"
-                            >Node.js 18</a
-                        >
-                        or later
-                    </li>
-                    <li>
-                        Open a terminal in the
-                        <code
-                            style="
-                                background: var(--bg-secondary);
-                                padding: 2px 6px;
-                                border-radius: 3px;
-                            "
-                            >sftools-proxy</code
-                        >
-                        folder
-                    </li>
-                    <li>
-                        Run:
-                        <code
-                            style="
-                                background: var(--bg-secondary);
-                                padding: 2px 6px;
-                                border-radius: 3px;
-                            "
-                            >npm run install-host</code
-                        >
-                    </li>
-                    <li>Restart Chrome completely</li>
-                    <li>Go to Settings tab and enable the "Local Proxy" toggle</li>
-                </ol>
-                <div style="text-align: right">
-                    <button class="button-brand" id="cors-modal-close">Close</button>
-                </div>
-            </div>
-        </modal-popup>
-
-        <script type="module" src="app.js"></script>
+        <div id="root"></div>
+        <script type="module" src="app.ts"></script>
     </body>
 </html>
